<resources>
    <string name="app_name">Flag</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_profile">Profile Temporary</string>
    <string name="menu_map">Flag Map</string>
    <string name="menu_events_list">Liste des évènenements</string>
    <string name="menu_events_add">Ajouter un évènement</string>
    <string name="menu_inbox">Boite de messagerie</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_logout">Se déconnecter</string>
    <string name="menu_about">A propos</string>


    <string name="splash_text">DECOUVREZ ET PARTAGEZ VOTRE PLAISIR AUTOUR DE VOUS</string>

    // buttons
    <string name="join_event">Joindre</string>

    // authentication
    <string name="login_text">Se connecter</string>
    <string name="sign_up_text">S\'inscrire</string>
    <string name="begin_text">Commençons</string>
    <string name="send_text">Envoyer</string>
    <string name="sm_login">Ou connectez-vous avec</string>
    <string name="forgot_password_text">Mot de passe oublié?</string>
    <string name="forgot_password_info">Entrez votre email et nous vous envoyons un nouveau mot de passe.</string>

    // mapbox
    <string name="mapbox_access_token">pk.eyJ1IjoidW5mbG9hdCIsImEiOiJja2ZidzYwZHkxYTJxMnVvOGxhcDVqY2VoIn0.us6BIn1JVrMzJ7ufhJuDjQ</string>

    // about
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    // settings
    <string name="settings">Paramètres</string>
    <string name="about">A propos</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>