<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_main"
        >
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            />

        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_map"
            />
        <item
            android:id="@+id/nav_list_events"
            android:title="@string/menu_events_list"
            />
        <item
            android:id="@+id/nav_add_event"
            android:title="@string/menu_events_add" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu_bottom"
        >
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>